--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^2.4.0",
@@ -21,7 +22,8 @@
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "react-toastify": "^8.1.0"
+    "react-toastify": "^8.1.0",
+    "react-transition-group": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
